add endpoint payment
